fix: header content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
     <div class="container">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <header>
+            <h1>Playing Cards</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </header>
     </div>
 
   <div class="container">
