--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <h1>Playing Cards</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </header>
-    </div>
+    <header>
+        <div class="jumbotron jumbotron-fluid bg-dark text-white">
+            <div class="container">
+                <h1>Playing Cards</h1>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </header>
 
   <div class="container">
         <main>
