--- a/index.html
+++ b/index.html
@@ -26,35 +26,37 @@
   <div class="container">
         <main>
             <!-- Card 1 -->
-            <div>
-            <img src="img/card-club-icon.png" alt="the club suit symbol">
-            <h2>Clubs</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
-            <a href="#">Play</a>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
+                    <h2 class="card-title">Clubs</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
+                    <a class="btn btn-dark" href="#" role="button">Play</a>
+                </div>
             </div>
 
             <!-- Card 2 -->
-            <div>
-            <img src="img/card-diamond-icon.png" alt="the diamond suit symbol">
-            <h2>Diamonds</h2>
-            <p>Quam, officiis ut adipisci pariatur veniam labore ipsum optio tenetur!</p>
-            <a href="#">Play</a>
+            <div class="card">
+                <img src="img/card-diamond-icon.png" alt="the diamond suit symbol">
+                <h2>Diamonds</h2>
+                <p>Quam, officiis ut adipisci pariatur veniam labore ipsum optio tenetur!</p>
+                <a href="#">Play</a>
             </div>
 
             <!-- Card 3 -->
-            <div>
-            <img src="img/card-heart-icon.png" alt="the heart suit symbol">
-            <h2>Hearts</h2>
-            <p>Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
-            <a href="#">Play</a>
+            <div class="card">
+                <img src="img/card-heart-icon.png" alt="the heart suit symbol">
+                <h2>Hearts</h2>
+                <p>Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
+                <a href="#">Play</a>
             </div>
 
             <!-- Card 4 -->
-            <div>
-            <img src="img/card-spade-icon.png" alt="the heart suit symbol">
-            <h2>Spades</h2>
-            <p>Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
-            <a href="#">Play</a>
+            <div class="card">
+                <img src="img/card-spade-icon.png" alt="the heart suit symbol">
+                <h2>Spades</h2>
+                <p>Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
+                <a href="#">Play</a>
             </div>
 
         </main>
