--- a/index.html
+++ b/index.html
@@ -23,43 +23,58 @@
         </div>
     </header>
 
-  <div class="container">
-        <main>
-            <!-- Card 1 -->
-            <div class="card mb-4">
-                <div class="card-body">
-                    <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
-                    <h2 class="card-title">Clubs</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
-                    <a class="btn btn-dark" href="#" role="button">Play</a>
+  <main>
+        <div class="container">
+            <div class="row row-cols-md-2 row-cols-lg-4">
+                <!-- Card 1 -->
+                <div class="col">
+                    <div class="card d-flex mb-4">
+                        <div class="card-body">
+                            <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
+                            <h2 class="card-title">Clubs</h2>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
+                            <a class="btn btn-dark" href="#" role="button">Play</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="col">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <img class="card-img-top pb-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
+                            <h2 class="card-title">Diamonds</h2>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
+                            <a class="btn btn-dark" href="#" role="button">Play</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col">
+                    <div class="card mb-4">
+                            <div class="card-body">
+                                <img class="card-img-top pb-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
+                                <h2 class="card-title">Hearts</h2>
+                                <p class="card-text">Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
+                                <a class="btn btn-dark" href="#" role="button">Play</a>
+                            </div>
+                    </div>
+                </div>
+
+                    <!-- Card 4 -->
+                <div class="col">
+                    <div class="card mb-4">
+                            <div class="card-body">
+                                <img class="card-img-top pb-3" src="img/card-spade-icon.png" alt="the spade suit symbol">
+                                <h2 class="card-title">Spades</h2>
+                                <p class="card-text">Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
+                                <a class="btn btn-dark" href="#" role="button">Play</a>
+                            </div>
+                    </div>
                 </div>
             </div>
-
-            <!-- Card 2 -->
-            <div class="card">
-                <img src="img/card-diamond-icon.png" alt="the diamond suit symbol">
-                <h2>Diamonds</h2>
-                <p>Quam, officiis ut adipisci pariatur veniam labore ipsum optio tenetur!</p>
-                <a href="#">Play</a>
-            </div>
-
-            <!-- Card 3 -->
-            <div class="card">
-                <img src="img/card-heart-icon.png" alt="the heart suit symbol">
-                <h2>Hearts</h2>
-                <p>Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
-                <a href="#">Play</a>
-            </div>
-
-            <!-- Card 4 -->
-            <div class="card">
-                <img src="img/card-spade-icon.png" alt="the heart suit symbol">
-                <h2>Spades</h2>
-                <p>Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
-                <a href="#">Play</a>
-            </div>
-
-        </main>
-    </div>  
+        </div>
+    </main>  
 </body>
 </html>
