--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="container">
             <div class="row row-cols-md-2 row-cols-lg-4">
                 <!-- Card 1 -->
-                <div class="col">
-                    <div class="card d-flex mb-4">
+                <div class="col d-flex">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
                             <h2 class="card-title">Clubs</h2>
@@ -39,7 +39,7 @@
                 </div>
 
                 <!-- Card 2 -->
-                <div class="col">
+                <div class="col d-flex">
                     <div class="card mb-4">
                         <div class="card-body">
                             <img class="card-img-top pb-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
@@ -51,7 +51,7 @@
                 </div>
 
                 <!-- Card 3 -->
-                <div class="col">
+                <div class="col d-flex">
                     <div class="card mb-4">
                             <div class="card-body">
                                 <img class="card-img-top pb-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
@@ -63,7 +63,7 @@
                 </div>
 
                     <!-- Card 4 -->
-                <div class="col">
+                <div class="col d-flex">
                     <div class="card mb-4">
                             <div class="card-body">
                                 <img class="card-img-top pb-3" src="img/card-spade-icon.png" alt="the spade suit symbol">
