--- a/index.html
+++ b/index.html
@@ -25,54 +25,79 @@
 
   <main>
         <div class="container">
-            <div class="row row-cols-md-2 row-cols-lg-4">
+            <div class="row">
                 <!-- Card 1 -->
-                <div class="col d-flex">
+                <div class="col-md-6 col-xl-3 d-flex">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
-                            <h2 class="card-title">Clubs</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
-                            <a class="btn btn-dark" href="#" role="button">Play</a>
+                            <div class="row">
+                                <div class="col col-sm-auto col-xl-12">
+                                    <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
+                                </div>
+                                <div class="col">
+                                    <h2 class="card-title">Clubs</h2>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
+                                    <a class="btn btn-dark" href="#" role="button">Play</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Card 2 -->
-                <div class="col d-flex">
+                <div class="col-md-6 col-xl-3 d-flex">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <img class="card-img-top pb-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
-                            <h2 class="card-title">Diamonds</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
-                            <a class="btn btn-dark" href="#" role="button">Play</a>
+                            <div class="row">
+                                <div class="col col-sm-auto col-xl-12">
+                                    <img class="card-img-top pb-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
+                                </div>
+                                <div class="col">
+                                    <h2 class="card-title">Diamonds</h2>
+                                    <p class="card-text">Quam, officiis ut adipisci pariatur veniam labore ipsum optio tenetur!</p>
+                                    <a class="btn btn-dark" href="#" role="button">Play</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Card 3 -->
-                <div class="col d-flex">
+                <div class="col-md-6 col-xl-3 d-flex">
                     <div class="card mb-4">
                             <div class="card-body">
-                                <img class="card-img-top pb-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
-                                <h2 class="card-title">Hearts</h2>
-                                <p class="card-text">Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
-                                <a class="btn btn-dark" href="#" role="button">Play</a>
+                             <div class="row">
+                                <div class="col col-sm-auto col-xl-12">
+                                    <img class="card-img-top pb-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
+                                </div>
+                                <div class="col">
+                                    <h2 class="card-title">Hearts</h2>
+                                    <p class="card-text">Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
+                                    <a class="btn btn-dark" href="#" role="button">Play</a>
+                                </div>                               
                             </div>
+                        </div>
                     </div>
                 </div>
 
                     <!-- Card 4 -->
-                <div class="col d-flex">
+                <div class="col-md-6 col-xl-3 d-flex">
                     <div class="card mb-4">
                             <div class="card-body">
-                                <img class="card-img-top pb-3" src="img/card-spade-icon.png" alt="the spade suit symbol">
-                                <h2 class="card-title">Spades</h2>
-                                <p class="card-text">Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
-                                <a class="btn btn-dark" href="#" role="button">Play</a>
+                             <div class="row">
+                                <div class="col col-sm-auto col-xl-12">
+                                    <img class="card-img-top pb-3" src="img/card-spade-icon.png" alt="the spade suit symbol">
+                                </div>
+                                <div class="col">
+                                    <h2 class="card-title">Spades</h2>
+                                    <p class="card-text">Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
+                                    <a class="btn btn-dark" href="#" role="button">Play</a>
+                                </div>                               
                             </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </main>  
