--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col col-sm-auto col-xl-12">
+                                <div class="col-xs-12 col-sm-auto col-xl-12">
                                     <img class="card-img-top pb-3" src="img/card-club-icon.png" alt="the club suit symbol">
                                 </div>
                                 <div class="col">
@@ -49,7 +49,7 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col col-sm-auto col-xl-12">
+                                <div class="col-xs-12 col-sm-auto col-xl-12">
                                     <img class="card-img-top pb-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
                                 </div>
                                 <div class="col">
@@ -67,7 +67,7 @@
                     <div class="card mb-4">
                             <div class="card-body">
                              <div class="row">
-                                <div class="col col-sm-auto col-xl-12">
+                                <div class="col-xs-12 col-sm-auto col-xl-12">
                                     <img class="card-img-top pb-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
                                 </div>
                                 <div class="col">
@@ -85,7 +85,7 @@
                     <div class="card mb-4">
                             <div class="card-body">
                              <div class="row">
-                                <div class="col col-sm-auto col-xl-12">
+                                <div class="col-xs-12 col-sm-auto col-xl-12">
                                     <img class="card-img-top pb-3" src="img/card-spade-icon.png" alt="the spade suit symbol">
                                 </div>
                                 <div class="col">
